[gallery] css overflow fix

--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -2,6 +2,7 @@
 
 .gallery-wrapper
   margin-top: 20px
+  overflow: hidden
 
   .add-group
     margin-right: 20px
